tests/contract_testcases/substrate/tags/struct_tag_02.sol

        /// @param f asdad
        /// @param f bar
        struct x {
            uint32 f;
        }
// ---- Expect: diagnostics ----
// error: 3:14-20: duplicate tag '@param' for 'f'
